src/test/deca/syntax/valid/test_objets/objet_multdecl.deca
//Description : Déclaration de plusieurs attributs
//
class A {
    int x ;
    float y ;
    boolean a ;
}