src/test/deca/syntax/invalid/decl_int_overflow.deca
//  Description :
//            Déclaration d'un entier trop grand
//
// Résultat:
//?
//
{
    int x = 12345678912;
}